Se confirma implementacion de capas y test

--- a/Infraestructure.Data/App.config
+++ b/Infraestructure.Data/App.config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
     <add name="SampleArchContext"
-      connectionString="Data Source=(LocalDb)\mssqllocaldb;Initial Catalog=SampleArch;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\SampleArch.mdf"
+      connectionString="Data Source=(LocalDb)\mssqllocaldb;Initial Catalog=SampleArch;Integrated Security=SSPI;"
       providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <entityFramework>
