--- a/UI.Console/App.config
+++ b/UI.Console/App.config
@@ -9,7 +9,7 @@
   </startup>
   <connectionStrings>
     <add name="SampleArchContext"
-      connectionString="Data Source=(LocalDb)\mssqllocaldb;Initial Catalog=SampleArch;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\SampleArch.mdf"
+      connectionString="Data Source=(LocalDb)\mssqllocaldb;Initial Catalog=SampleArch;Integrated Security=SSPI;"
       providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <entityFramework>
