Se confirma implementación de ejemplo de banco para logica de dominio y de aplicación.

--- a/Application.Test/App.config
+++ b/Application.Test/App.config
@@ -6,15 +6,11 @@
   </configSections>
   <connectionStrings>
     <add name="BancoContext"
-      connectionString="Data Source=(LocalDb)\mssqllocaldb;Initial Catalog=BancoExampleDDD;Integrated Security=SSPI;"
+      connectionString="Data Source=(LocalDb)\mssqllocaldb;Initial Catalog=BancoExampleDDDTest;Integrated Security=SSPI;"
       providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="mssqllocaldb" />
-      </parameters>
-    </defaultConnectionFactory>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
