--- a/UI.Console/App.config
+++ b/UI.Console/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
   </startup>
   <connectionStrings>
-    <add name="SampleArchContext"
+    <add name="BancoContext"
       connectionString="Data Source=(LocalDb)\mssqllocaldb;Initial Catalog=SampleArch;Integrated Security=SSPI;"
       providerName="System.Data.SqlClient"/>
   </connectionStrings>
