--- a/WebApi/Web.config
+++ b/WebApi/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApi-20171025015137.mdf;Initial Catalog=aspnet-WebApi-20171025015137;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-    <add name="SampleArchContext"
+    <add name="BancoContext"
       connectionString="Data Source=(LocalDb)\mssqllocaldb;Initial Catalog=SampleArch;Integrated Security=SSPI;"
       providerName="System.Data.SqlClient"/>
   </connectionStrings>
